# Thesis-Website-Project

./: .replit  README.md  app.py  app1.py  authentication.py  map.html  pyproject.toml  requirements.txt  script.js  style.css  test.py
static/: about.css  dash.css  login.css  map.js  map1.js  mqtt.js  mqtt1.js  regist.css  script.js  style.css
templates/: about.html  dashb.html  dashboard.html  index.html  login.html  map.html  regist.html  register.html
